Added delays to pause() and resume()

--- a/tests/timer.html
+++ b/tests/timer.html
@@ -8,7 +8,7 @@
 			console.log('timer done after 10', evt)
 		}, 10);
 
-		var tmr = timer();
+		/*var tmr = timer();
 
 		timer(function(){
 			console.log('timer done after 100', tmr.stop())
@@ -18,17 +18,19 @@
 			console.log('timer increment', evt)
 		}, 200, 50);
 
-
+*/
 		tmr = timer(function(evt){
-			console.log('timer start stop', evt)
+			console.log(' ** timer start stop', evt)
 		}, 500, 50);
 
-		timer(function(){ tmr.pause(); }, 100);
-		timer(function(){ tmr.resume(); }, 200);
-		timer(function(){ tmr.pause(); }, 400);
-		timer(function(){ tmr.resume(); }, 600);
+		tmr.pause(100);
+		tmr.resume(400);
+		tmr.pause(1000);
+		tmr.resume(1200);
 
 		//console.log()
+
+		// timer(1000).pause(100).resume(200).then('foo');
     </script>
 
 </head>
