--- a/tests/timer.html
+++ b/tests/timer.html
@@ -3,107 +3,160 @@
 <head>
     <title>DX Timer Test</title>
     <script src="../timer.js"></script>
-    <script>
-		// TODO:
-		// get pause and resume times to equate to ellapsed time: tmr.pause(200).resume(400)
-		// no dur == Infinity
-		// no arguments should create an Infinite timer
-
-/*		timer(function(evt){
-			console.log(' > timer done after 10', evt)
-		}, 10)//.then(function(){ console.log('--------- done'); });
-
-
-		var tmr1 = timer();
-
-		timer(function(){
-			console.log('timer done after 100', tmr1)
-			tmr1.stop()
-		}, 100);
-
-		timer(function(evt){
-			console.log('timer increment', evt)
-		}, 200, 50);
-
-
-		tmr = timer(function(evt){
-			console.log(' > timer start stop', evt)
-		}, 300, 50);
-
-
-		var ns = {
-			ctx: function(){
-				id:'it is good!',
-				timer(this, function(){
-					console.log(' > ctx func timer done after 10', this.id);
-				}, 10);
-			},
-			strDone: function(){
-				console.log(' > str func timer done after 10');
-			},
-			str: function(){
-				timer(this, this.strDone, 10);
-			},
-			fnDone: function(){
-				console.log(' > fn timer done after 10');
-			},
-			fn: function(){
-				timer(this, 'fnDone', 10);
-			}
-		}
-
-		ns.ctx();
-		ns.str();
-		ns.fn();
-
-
-		var inf = timer(function(){ console.log('never called')}, 0, 500);
-		var t2 = timer(function(evt){
-			console.log(' > should be stopped!!!!', evt)
-		}, 500)
-		timer(function(){
-			console.log('stop other timer', inf.pause(), t2.pause());
-		}, 200);
-*/
-		var t = timer(function(){
-			console.log('simple timer complete.');
-		}, 200).then(function(){console.log('simple timer then done!')});
-
-		var tmr = timer(function(evt){
-			console.log('tmr', evt);
-		}, 0, 30);
-		tmr.pause(200).resume(400).pause(600).resume(1200).pause(1600);
-		//.then(function(){ console.log('we are done'); }).then(function(){ console.log('we are REALLY done'); });
-		//tmr.pause(1000);
-		//tmr.resume(1200);
-		//console.log()
-		//timer(1000).pause(100).resume(200).then('foo');
-
-	</script>
 	<style>
+		body{
+			font-family:sans-serif;
+		}
+		.buttons{
+			margin-top:10px;
+		}
+		#outputNode{
+			background:#B8E1EF;
+			font-size:12px;
+			margin:20px;
+		}
+		.logRow{
+			padding:3px 10px;
+			border-bottom:1px solid #89C1D3;
+		}
 		#block{
 			width:50px;
-			height:50px;
+			height:15px;
 			background:#dd0000;
 			border:1px solid #560000;
 			position:absolute;
 			left:10px;
-			top:200px;
+			top:53px;
 		}
 	</style>
+    <script>
+		var outputNode;
+		var log = function(){
+			var msg = [];
+			var a = arguments;
+			for(var i=0; i<a.length;i++){
+				if(typeof a[i] == 'string'){
+					msg.push(a[i]);
+				}else if(typeof a[i] == 'object' && a[i].type == 'timer'){
+					msg.push('['+a[i].time+']');
+				}
+			}
+			msg = msg.join(' ');
+			outputNode.innerHTML += '<div class="logRow">'+msg+'</div>'
+			console.log(msg);
+		}
+
+		function simple(){
+			log('start simple...')
+			timer(function(evt){
+				log(' > simple done', evt)
+			}, 100);
+		}
+
+		function thenTest(){
+			log('start thenTest...');
+			var tmr = timer(function(evt){
+				log(' > thenTest done', evt)
+			}, 100).then(function(){ log('thenTest then() called', tmr); });
+		}
+
+		function increment(){
+			log('start increment...');
+			timer(function(evt){
+				log('timer increment', Math.ceil(evt.percentage*100) + "%")
+			}, 200, 50).then(function(){ log('then() done'); });
+		}
+
+		function startStop(){
+			log('start startStop test...');
+			var tmr = timer(function(e){
+				log('    tick', e)
+			}, 0, 250, true); // paused, and 0 == Infinity
+
+			setTimeout(function(){
+				tmr.start();
+				log('timer started after 500', tmr.time);
+			}, 500);
+			setTimeout(function(){
+				tmr.pause();
+				log('timer paused after 1000', tmr.time);
+			}, 1000);
+			setTimeout(function(){
+				tmr.start();
+				log('timer restarted after 1500', tmr.time);
+			}, 2000);
+			setTimeout(function(){
+				tmr.stop();
+				log('timer stopped after 3000', tmr.time);
+			}, 3000);
+		}
+
+		function context(){
+			log('start context test...');
+			var ns = {
+				id:'correctId',
+				ctx: function(){
+					timer(this, function(){
+						log(' > ctx func timer done after 10', this.id);
+					}, 10);
+				},
+				strDone: function(){
+					log(' > str func timer done after 10', this.id);
+				},
+				str: function(){
+					timer(this, this.strDone, 10);
+				},
+				fnDone: function(){
+					log(' > fn timer done after 10', this.id);
+				},
+				fn: function(){
+					timer(this, 'fnDone', 10);
+				}
+			}
+
+			ns.ctx();
+			ns.str();
+			ns.fn();
+		}
+
+
+
+	</script>
 </head>
 <body>
     <h1 id="header">DX Timer Test</h1>
-
 	<div id="block"></div>
+	<div class="buttons">
+		<button id="move">Move block</button>
+		<button id="simple">Simple</button>
+		<button id="thenTest">Then Test</button>
+		<button id="increment">Increment</button>
+		<button id="startStop">startStop</button>
+		<button id="context">Context</button>
+	</div>
+	<div id="outputNode"></div>
+
 	<script>
-		/*var n = document.getElementById('block');
-		var beg = 10;
-		var end = 510;
-		timer(function(evt){
-			var loc = (end-beg)*evt.percentage;
-			n.style.left = loc+'px';
-		}, 3000, 30, quadInOut);*/
+		var id = function(str){ return document.getElementById(str); }
+		outputNode = id('outputNode');
+
+		function move(){
+			var n = id('block');
+			var beg = 10;
+			var end = 510;
+			timer(function(evt){
+				var loc = (end-beg)*evt.percentage;
+				n.style.left = loc+'px';
+			}, 3000, 30, "easeInOut");
+		}
+
+		id('move').onclick = move;
+		id('simple').onclick = simple;
+		id('thenTest').onclick = thenTest;
+		id('increment').onclick = increment;
+		id('startStop').onclick = startStop;
+		id('context').onclick = context;
+
 	</script>
 </body>
 </html>
